syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package service;

option go_package = "api/grpc";


message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string access_token = 1;
}


message Note {
  string title = 1;
  string description = 2;
  string value = 3;
  bytes raw_value = 4;
}

message AddNoteRequest {
  Note note = 1;
}

message AddNoteResponse {
  string id = 1;
}

message GetNoteRequest {
  string id = 1;
}

message GetNoteResponse {
  Note note = 1;
}

message GetNotesResponse {
  repeated Note notes = 1;
}


message Card {
  string title = 1;
  string description = 2;
  string number = 3;
  string holder = 4;
  string cvc = 5;
  google.protobuf.Timestamp expiry = 6;
}

message AddCardRequest {
  Card card = 1;
}

message AddCardResponse {
  string id = 1;
}

message GetCardRequest {
  string id = 1;
}

message GetCardResponse {
  Card card = 1;
}

message GetCardsResponse {
  repeated Card cards = 1;
}


message Credentials {
  string id = 1;
  string title = 2;
  string description = 3;
  string username = 4;
  string password = 5;
}

message AddCredentialsRequest {
  Credentials credentials = 1;
}

message AddCredentialsResponse {
  string id = 1;
}

message UpdateCredentialsRequest {
  Credentials credentials = 1;
}

message GetCredentialsResponse {
  Credentials credentials = 1;
}

message GetAllCredentialsResponse {
  repeated Credentials credentials = 1;
}

message GetRequest {
  string id = 1;
}

message DeleteRequest {
  string id = 1;
}

service Keeper {
  rpc SignUp(AuthRequest) returns (AuthResponse);
  rpc SignIn(AuthRequest) returns (AuthResponse);

  rpc AddNote(AddNoteRequest) returns (AddNoteResponse);
  rpc GetNote(GetNoteRequest) returns (GetNoteResponse);
  rpc GetTextNotes(google.protobuf.Empty) returns (GetNotesResponse);
  rpc GetRawNotes(google.protobuf.Empty) returns (GetNotesResponse);

  rpc AddCard(AddCardRequest) returns (AddCardResponse);
  rpc GetCard(GetCardRequest) returns (GetCardResponse);
  rpc GetCards(google.protobuf.Empty) returns (GetCardsResponse);

  rpc AddCredentials(AddCredentialsRequest) returns (AddCredentialsResponse);
  rpc GetCredentials(GetRequest) returns (GetCredentialsResponse);
  rpc GetAllCredentials(google.protobuf.Empty) returns (GetAllCredentialsResponse);

  rpc UpdateCredentials(UpdateCredentialsRequest) returns (google.protobuf.Empty);

  rpc DeleteCredentials(DeleteRequest) returns (google.protobuf.Empty);
}
